--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.0",
+    "regenerator-runtime": "^0.13.5",
     "webpack": "^4.41.5"
   },
   "devDependencies": {
@@ -40,6 +41,8 @@
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
     "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0"
   }
 }
